--- a/src/ghaven/ghaven.csproj
+++ b/src/ghaven/ghaven.csproj
@@ -11,10 +11,11 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
-    <PackageReference Include="SixLabors.Fonts" Version="1.0.0-beta17" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />
-    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta14" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />    
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\lib-game-haven\lib-gamehaven.csproj" />
   </ItemGroup>
   
 </Project>
