Pull joystick into its own lib for later nugetifying (step 1)
Step 1 - Generic bits into a Nfw.Linux.Joystick.Generic

--- a/src/lib-game-haven/lib-gamehaven.csproj
+++ b/src/lib-game-haven/lib-gamehaven.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta14" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nfw.Linux.Joystick\Nfw.Linux.Joystick.csproj" />
+  </ItemGroup>
 </Project>
