--- a/src/Nfw.Linux.Joystick/Nfw.Linux.Joystick.csproj
+++ b/src/Nfw.Linux.Joystick/Nfw.Linux.Joystick.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\Nfw.Linux.Joystick\Nfw.Linux.Joystick.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />    
+  </ItemGroup>
 </Project>
