--- a/src/jstest/jstest.csproj
+++ b/src/jstest/jstest.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\lib-game-haven\lib-gamehaven.csproj" />
+    <PackageReference Include="Nfw.Linux.Joystick" Version="1.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
