--- a/src/lib-game-haven/lib-gamehaven.csproj
+++ b/src/lib-game-haven/lib-gamehaven.csproj
@@ -9,10 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />    
     <PackageReference Include="SixLabors.Fonts" Version="1.0.0-beta17" />
     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.2" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta14" />
-    <PackageReference Include="Nfw.Linux.Joystick" Version="1.0.0" />
+    <PackageReference Include="Nfw.Linux.Hid" Version="1.0.1" />
+    <PackageReference Include="Nfw.Linux.Joystick" Version="1.0.0" />    
   </ItemGroup>  
 </Project>
